kubernetes/apps/matrix/synapse/apps/webui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: element
  name: element
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: element
  type: ClusterIP
