kubernetes/apps/matrix/synapse/apps/webui/ingress.yaml
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: element
#   annotations:
#     kubernetes.io/ingress.class: traefik-external
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`element.icecoldlair.com`)
#       kind: Rule
#       services:
#         - name: element
#           port: 80
#           namespace: matrix
#       #middlewares:
#       #  - name: default-headers
#       #    namespace: default
#   tls:
#     secretName: icecoldlair-com-prod
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: element-cloud
#   annotations:
#     kubernetes.io/ingress.class: traefik-external
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`element.cloud.icecoldlair.com`)
#       kind: Rule
#       services:
#         - name: element
#           port: 80
#           namespace: matrix
#       #middlewares:
#       #  - name: default-headers
#       #    namespace: default
#   tls:
#     secretName: cloud-icecoldlair-com-prod
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: element-cloud-default
#   annotations:
#     kubernetes.io/ingress.class: traefik-external
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`element2.cloud.icecoldlair.com`)
#       kind: Rule
#       services:
#         - name: element-default
#           port: 80
#           namespace: matrix
#       #middlewares:
#       #  - name: default-headers
#       #    namespace: default
#   tls:
#     secretName: cloud-icecoldlair-com-prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app element-cloud
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: &host element.icecoldlair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: element
                port:
                  number: 80
  tls:
  - hosts:
      - element.icecoldlair.com
    secretName: icecoldlair-com-prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app element
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: &host element.cloud.icecoldlair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: element
                port:
                  number: 80
  tls:
  - hosts:
      - element.cloud.icecoldlair.com
    secretName: cloud-icecoldlair-com-prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app element-cloud-default-new
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: &host element2.cloud.icecoldlair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: element-default
                port:
                  number: 80
  tls:
  - hosts:
      - element2.cloud.icecoldlair.com
    secretName: cloud-icecoldlair-com-prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app element-cloud-new
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: &host element.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: element
                port:
                  number: 80
  tls:
  - hosts:
      - element.icylair.com
    secretName: icylair-com-prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app element-new
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: &host element.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: element
                port:
                  number: 80
  tls:
  - hosts:
      - element.cloud.icylair.com
    secretName: cloud-icylair-com-prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app element-cloud-default-new
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: &host element2.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: element-default
                port:
                  number: 80
  tls:
  - hosts:
      - element2.cloud.icylair.com
    secretName: cloud-icylair-com-prod
