kubernetes/apps/matrix/synapse/apps/webui/riot.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: element
  name: element
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: element
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: element
  name: element
spec:
  replicas: 1
  selector:
    matchLabels:
      app: element
  template:
    metadata:
      labels:
        app: element
    spec:
      containers:
        - image: vectorim/element-web:v1.11.31
          imagePullPolicy: IfNotPresent
          name: element-web
          readinessProbe:
            tcpSocket:
              port: 80
          resources:
            requests:
              memory: '1Mi'
              cpu: '1m'
            limits:
              memory: '3000Mi'
              cpu: '2500m'
          volumeMounts:
            - mountPath: /app/config.json
              name: element-config
              subPath: config.json
      restartPolicy: Always
      volumes:
        - configMap:
            name: element-config
          name: element-config
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: element
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`element.icecoldlair.com`)
      kind: Rule
      services:
        - name: element
          port: 80
          namespace: matrix
      #middlewares:
      #  - name: default-headers
      #    namespace: default
  tls:
    secretName: icecoldlair-com-prod
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: element-cloud
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`element.cloud.icecoldlair.com`)
      kind: Rule
      services:
        - name: element
          port: 80
          namespace: matrix
      #middlewares:
      #  - name: default-headers
      #    namespace: default
  tls:
    secretName: cloud-icecoldlair-com-prod
